# personal-productivity-projects

./: README.md
Pomo_Tracker/: pomo_tracker.py
Pomo_Tracker_v1/: home.html  pomo_tracker.py
agentic_research/: README.md  config.py  llm_client.py  main.py  pyproject.toml
agentic_research/agents/: agent_tools.py  agents.py
agentic_research/chroma_db/: chroma.sqlite3
agentic_research/research/budget_2026/: -speech-by-mos-rahayu-mahzam-at-the-committee-of-supply-debate-2026.md  speech-by-acting-minister-for-transport-mr-jeffrey-siow-at-ministry-of-transport-s-committee-of-supply-debate-2026.md  speech-by-minister-josephine-teo-at-the-committee-of-supply-debate-2026.md  speech-by-minister-of-state-for-transport-mr-baey-yam-keng-at-ministry-of-transport-s-committee-of-supply-debate-2026.md  speech-by-mos-jasmin-lau-at-the-committee-of-supply-debate-2026.md  speech-by-senior-minister-of-state-for-transport--ms-sun-xueling-at-ministry-of-transport-s-committee-of-supply-debate-2026.md  speech-by-senior-minister-of-state-for-transport-and-law-mr-murali-pillai-at-ministry-of-transport-s-committee-of-supply-2026-debate.md  speech-by-sms-tan-kiat-how-at-the-committee-of-supply-debate-2026.md
agentic_research/tools/: chunker.py  local_search.py  vector_store.py  web_scraper.py
meeting_transcriber/: README.md  main.py  pyproject.toml  server.py  transcribe.py
meeting_transcriber/static/: index.html
pomodoro_app/: database.py  main.py  models.py  pomodoro.db  pyproject.toml
pomodoro_app/static/: script.js  style.css  sw.js
pomodoro_app/templates/: analytics.html  (+1 more)
(+18 files in other folders)
