[project]
name = "agentic-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.7",
    "google-genai>=1.68.0",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
