[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "mlx-whisper>=0.4.3",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.48.0",
]
